fix(refresh token): set refresh token in local storage and set in header authorization when call refresh token API
